# MyWebServer

./: .gitignore
WebServer/: CMakeLists.txt  Channel.cpp  Channel.h  EventLoop.cpp  EventThread.h  EventThreadPool.cpp  EventThreadPool.h  Poller.cpp  Poller.h  TimerManager.cpp  TimerManager.h  WebServer.cpp  cgiHandler.cpp  cgiHandler.h  httpConnection.cpp  httpConnection.h  mainReactor.cpp  timer.cpp  timer.h
WebServer/base/: AsyncLogging.cpp  AsyncLogging.h  CMakeLists.txt  CacheManager.h  CountDownLatch.cpp  LFUCache.cpp  Logging.cpp  Logging.h  MemoryPool.cpp  MemoryPool.h  Thread.cpp  Thread.h  httpDefine.cpp  httpDefine.h  logStream.cpp  logStream.h  logUtil.cpp  logUtil.h  mutexLock.cpp  mutexLock.h  noncopyable.h  socketUtils.cpp  socketUtils.h
WebServer/base/test/: CMakeLists.txt  logtest.cpp  memoryPooltest.cpp
WebServer/detectUtil/: CMakeLists.txt  Common.cpp  Common.h  DeepLabv3.cpp  DetCrossCenter.cpp  DetCrossCenter.h  DetMatrixHoleCenter.cpp  DetMatrixHoleCenter.h  DetPlumCenter.h  DetRectangleCenter.cpp  DetRectangleCenter.h  DetectMark.h  EnhanceImage.cpp  Execute.h  FilterImage.cpp  FitLine.cpp  FitLine.h  Gradient.h  Hist.cpp  ListSort.h  Threshold.cpp  base64.cpp  base64.h  main.cpp  paramAnalyze.cpp  yolov5.cpp  yolov5.h
WebServer/pages/: op.cpp  upload.html
newVersion/WebServer/: Channel.cpp  Channel.h  Connection.h  EventLoop.h  EventThread.cpp  Poller.h  TimerManager.cpp  TimerManager.h  httpConnection.cpp  mainReactor.h  timer.cpp  timer.h
newVersion/WebServer/base/: AsyncLogging.cpp  CountDownLatch.h  LFUCache.h  Logging.cpp  Thread.cpp  httpDataUtil.cpp  httpDataUtil.h  logStream.h  mutexLock.h  skipList.h  socketUtils.cpp
newVersion/WebServer/base/test/: logtest.cpp  testSkiplist.cpp
newVersion/WebServer/detectUtil/: DeepLabv3.h  DetCircleCenter.cpp  DetCircleCenter.h  DetPlumCenter.cpp  DetectMark.cpp  Edge.cpp  Edge.h  EnhanceImage.h  Execute.cpp  FilterImage.h  FitCircleT.h  Gradient.cpp  Hist.h  LeastSquare.h  LogHelp.cpp  LogHelp.h  Threshold.h  paraType.h  paramAnalyze.h
newVersion/WebServer/pages/: op  register.html
